# math_tools

./: Cargo.toml  README.md  flake.nix
.github/workflows/: errors.yml  warnings.yml
.readme_assets/: description.md  install.sh  usage.md
src/: main.rs  polynomial.rs
tests/integration/: main.rs  polynomial_tests.rs
