cargo-features = ["codegen-backend"]
[package]
name = "math_tools"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
autodiff = { version = "0.7.0" }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "^0.6.3"
derive-new = "^0"
v_utils = "2.6.12"

[dev-dependencies]
insta = "^1.43.2"

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"
